Get scala formatting set up, and java 17 configs in place