@@ -1,4 +1,4 @@
-val scala2Version = "2.12.18"
+val scala2Version = "2.12.20"
 val scala3Version = "3.5.1"
 
 lazy val root = project
@@ -9,7 +9,11 @@ lazy val root = project
 
     scalaVersion := scala2Version,
 
-    libraryDependencies += "org.scalameta" %% "munit" % "1.0.0" % Test,
-    libraryDependencies += "org.apache.spark" %% "spark-sql" % "3.5.3"
+    Compile / run / fork := true,
+    javaOptions ++= List("--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"),
 
+    libraryDependencies ++= Seq(
+         "org.scalameta" %% "munit" % "1.0.0" % Test,
+         "org.apache.spark" %% "spark-sql" % "3.5.3",
+    ),
   )
